--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "update:dep": "npm-check",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "semantic-release": "semantic-release"
   },
   "author": "neilkalman@gmail.com",
   "license": "MIT",
@@ -22,6 +23,12 @@
     "prettyjson": "^1.2.1"
   },
   "devDependencies": {
-    "npm-check": "^5.9.0"
+    "npm-check": "^5.9.0",
+    "semantic-release-cli": "^4.1.0",
+    "semantic-release": "^15.13.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Kibibit/branch-it.git"
   }
 }
