--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
       [
         "@semantic-release/git",
         {
-          "assets": false,
+          "assets": ["package.json"],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
       ]
