--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "0.0.0-development",
+  "version": "1.2.0",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
@@ -48,7 +48,9 @@
       [
         "@semantic-release/git",
         {
-          "assets": ["package.json"],
+          "assets": [
+            "package.json"
+          ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
         }
       ]
