--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
@@ -41,7 +41,7 @@
     "url": "https://github.com/Kibibit/branch-it.git"
   },
   "release": {
-    "branch": "master",
+    "branch": "develop",
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
@@ -63,6 +63,6 @@
     }
   },
   "publishConfig": {
-    "tag": "stable"
+    "tag": "next"
   }
 }
