feat(release): trying to add next branch as well

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     ],
     "versionMapping": {
       "master": "stable",
-      "develop": "next"
+      "develop": "next",
+      "next": "next"
     }
   },
   "publishConfig": {
