feat(release): maybe add branches?

--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
   },
   "release": {
     "branch": "next",
+    "branches": [
+      "master",
+      {
+        "name": "next",
+        "prerelease": "beta"
+      }
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
