--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/Kibibit/branch-it.git"
   },
   "release": {
+    "branch": "master",
     "branches": [
       "master",
       {
