--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@semantic-release/release-notes-generator": "^7.1.4",
     "all-contributors-cli": "^6.1.2",
     "npm-check": "^5.9.0",
-    "semantic-release": "^15.13.3",
+    "semantic-release": "^16.0.0-beta.18",
     "semantic-release-cli": "^4.1.0"
   },
   "repository": {
