--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "1.3.0",
+  "version": "1.3.0-beta.2",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
