chore(release): 1.3.0-next.1 [skip ci]
# [1.3.0-next.1](https://github.com/Kibibit/branch-it/compare/v1.2.0...v1.3.0-next.1@next) (2019-03-07)

### Bug Fixes

* **package.json:** remove trailing comma ([47ef8d4](https://github.com/Kibibit/branch-it/commit/47ef8d4))
* **release:** add next branch. will it work? ([0b0a832](https://github.com/Kibibit/branch-it/commit/0b0a832))
* **release:** add prerelease branch ([6089d02](https://github.com/Kibibit/branch-it/commit/6089d02))
* **release:** change semantic-release version to beta ([c46ff56](https://github.com/Kibibit/branch-it/commit/c46ff56))
* **release:** skip git commit for beta branch ([ce4fc42](https://github.com/Kibibit/branch-it/commit/ce4fc42))
* **release:** test without analyzer? ([884bbbc](https://github.com/Kibibit/branch-it/commit/884bbbc))
* **release:** try and update @semantic-release/git to beta ([a79c560](https://github.com/Kibibit/branch-it/commit/a79c560))

### Features

* **blah:** release beta version ([ae0499a](https://github.com/Kibibit/branch-it/commit/ae0499a))
* **branchName:** support travis environment variable ([1d8b7a2](https://github.com/Kibibit/branch-it/commit/1d8b7a2))
* **refactor:** finalize file ([5fca341](https://github.com/Kibibit/branch-it/commit/5fca341))
* **release:** change release type based on branch ([41ecbfe](https://github.com/Kibibit/branch-it/commit/41ecbfe))
* **release:** make sure next branch is released as well ([8583b85](https://github.com/Kibibit/branch-it/commit/8583b85))
* **release:** maybe add branches? ([ff2f51d](https://github.com/Kibibit/branch-it/commit/ff2f51d))
* **release:** prerelease please? ([b5a0400](https://github.com/Kibibit/branch-it/commit/b5a0400))
* **release:** trying to add next branch as well ([d992555](https://github.com/Kibibit/branch-it/commit/d992555))
* **release:** trying to fix next version release ([c4d8728](https://github.com/Kibibit/branch-it/commit/c4d8728))
* **release:** what about without the branch field? ([060dcd6](https

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "1.3.0-beta.2",
+  "version": "1.3.0-next.1",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
