--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kibibit/branch-it",
-  "version": "1.3.0-next.1",
+  "version": "1.4.0",
   "description": "updates branch references in package.json",
   "main": "bin/branch-it.js",
   "bin": {
@@ -74,6 +74,6 @@
     }
   },
   "publishConfig": {
-    "tag": "next"
+    "tag": "stable"
   }
 }
